css/events.css
/*
===================================
===================================
Styles for an individual page

- Rename this file to match the page you are working on (e.g. home.css, about.css, etc.)
- Create a new file for your page and link this file to it in the <head> of your HTML document
- Variables from global.css will work in this CSS file as well. Do not add any variables to this file.
===================================
===================================
*/

/* 
===================================
Page Component Styles (icon grid, team member card)
===================================
*/

/* 
===================================
Section Styles (background, padding, etc.)
===================================
*/
/* wrapper */
.wrapper {
	width: 90%;
}
/* title section */
.title {
	width: 100%;
	text-align: center;
}
.title-img {
	width: 100%;
	height: 250px;
	margin-bottom: 60px;
	background-image: url("/assets/images/pages/event-program/introspective.jpg");
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}
.title-text {
	width: 90%;
	margin: 0 auto;
}
.title h2 {
	font-size: var(--font36);
	font-family: var(--main-font);
	line-height: var(--line-height40);
	margin-bottom: var(--spacing20);
}
.title p {
	margin: 0px;
	color: var(--ONYX, #424241);
	text-align: center;
}


/* Page cards */
.page-cards {
	margin: 100px 0px;
}
/* card img */
.page-card-img {
	width: 100%;
	height: 204px;
	border-radius: 10px;
	background-position: center;
	background-size: cover;
}
/* Network card */
.card-item1 .page-card-img {
	background-image: url("/assets/images/pages/event-program/networking.jpg");
}

/* Share card */
.card-item2 .page-card-img {
	background-image: url("/assets/images/pages/event-program/share.jpg");
}

/* Brainstorm card */
.card-item3 .page-card-img {
	background-image: url("/assets/images/pages/event-program/brianstorm.jpg");
}

/* Collaborate card */
.card-item4 .page-card-img {
	background-image: url("/assets/images/pages/event-program/collaborate.jpg");
}

/* Card title boxes */
.page-card-title {
	width: 100%;
	height: 130px;
	padding: 29px;
	margin: var(--spacing20) 0px;
	border-radius: 10px;
	text-align: center;
}
.page-card-title h3 {
	margin: 0px 0px var(--spacing20) 0px;
	font-size: var(--font28);
	line-height: var(--line-height32);
}

/* card title background colors */
.card-item1 .page-card-title {
	background-color: var(--color-yaleblue);
}
.card-item2 .page-card-title {
	background-color: var(--color-cybergrape);
}
.card-item3 .page-card-title {
	background-color: var(--color-copper);
}
.card-item4 .page-card-title {
	background-color: var(--color-teal);
}

/* text below the cards */
.page-card-text {
	margin-bottom: var(--spacing80);
}
.page-card-text p {
	color: var(--color-onyx);
}

/* Upcoming Events/Previous Events */

.upcoming-events,
.previous-events {
	margin-bottom: 150px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	row-gap: var(--spacing65);
	column-gap: var(--spacing40);
}

/* event image and text containers */
.event-img,
.event-info {
	width: 100%;
	margin: 0 auto;
}
.event-img img {
	width: 100%;
}

/* Upcoming/Previous events text */
.h4-title {
	margin: 150px 20px var(--spacing20) 20px;
	color: var(--color-onyx);
	text-align: center;
}
.event-info p {
	font-size: var(--font21);
	line-height: var(--line-height26);
	color: var(--color-onyx);
}
.event-info h4 {
	margin: var(--spacing20) 0px;
	color: var(--color-onyx);
}

/* Hiding larger screen events in mobile view*/
.larger-screen {
	display: none;
}

/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	/* Add styles that only apply to tablet. These are usually fixes to get resposnivenes right */
	.page-card-title h3 {
		margin: 0px 0px 15px 0px;
	}
}

/* Tablet and Larger */
@media screen and (min-width: 768px) {
	/* Add styles that apply to table and desktop */
	/* hiding event card text */
	.page-card-text {
		display: none;
	}

	.wrapper {
		width: var(--desktop-wrapper-width);
	}

	/* Title/Hero section */
	.title-img {
		display: none;
	}
	
	.title {
		height: 992px;
		background-image: url("/assets/images/pages/event-program/desktop/hero-d.jpg");
		background-size: cover;
		background-position: center;
		
	}
	.title-text {
		width: 100%;
		height: 100%;
		background: linear-gradient(92deg, rgba(9, 9, 9, 0.77) 40.35%, rgba(9, 9, 9, 0.74) 44.51%, rgba(9, 9, 9, 0.71) 48.63%, rgba(9, 9, 9, 0.00) 83.13%);
		
		display: flex;
		align-items: center;
	}
	.title-text div {
		width: 70%;
		margin: 0 auto;

		display: flex;
		flex-direction: column;
	}
	.title-text p,
	.title-text h2 {
		width: 40%;
		text-align: left;
		color: var(--color-white);
	}
	.title-text h2 {
		font-size: var(--font56);
		line-height: var(--line-height58);
	}


	/* Page Cards */
	.page-cards {
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		gap: var(--spacing20);
	}
	.page-cards > * {
		width: 45%;

		/* positioning */
		position: relative;
	}
	.page-card-img {
		height: 300px;
	}
	
	.page-card-title {
		height: 110px;
		padding: 20px;
		margin: 0px;
		border-radius: 0px 0px 10px 10px;
		text-align: left;
		/* positioning */
		position: absolute;
		bottom: 0px;
	}
	.page-card-title p {
		color: var(--color-white);
	}

	/* page card title background color changes */
	.card-item1 .page-card-title {
		background: linear-gradient(60deg, #195085 55.81%, rgba(66, 66, 65, 0.00) 70.18%);
	}
	.card-item2 .page-card-title {
		background: linear-gradient(60deg, #563867 55.81%, rgba(66, 66, 65, 0.00) 70.18%);
	}
	.card-item3 .page-card-title {
		background: linear-gradient(60deg, #955C17 55.81%, rgba(66, 66, 65, 0.00) 70.18%);
	}
	.card-item4 .page-card-title {
		background: linear-gradient(60deg, #017B80 55.81%, rgba(66, 66, 65, 0.00) 70.18%);
	}

	/* Displaying larger screen only events */
	.larger-screen {
		display: block;
	}

	/* Upcoming Events */
	/* Previous Events */
	.upcoming-events > *,
	.previous-events > * {
		flex-basis: 30%;
	}

	/* title for upcoming/previous events */
	.h4-title {
		font-size: var(--font46);
		line-height: var(--line-height50);
	}

}

/* Desktop Only */
@media screen and (min-width: 1024px) {
	/* Add styles that apply specifically to desktop */

	/* page cards */
	.page-card-img {
		height: 435px;
	}

	.page-card-title {
		height: 126px;
	}

	.page-card-title h3 {
		font-size: var(--font36);
		line-height: var(--line-height40);
	}

	/* Network card */
	.card-item1 .page-card-img {
		background-image: url("/assets/images/pages/event-program/desktop/network-d.jpg");
	}

	/* Share card */
	.card-item2 .page-card-img {
		background-image: url("/assets/images/pages/event-program/desktop/share-d.jpg");
	}

	/* Brainstorm card */
	.card-item3 .page-card-img {
		background-image: url("/assets/images/pages/event-program/desktop/brainstorm-d.jpg");
	}

	/* Collaborate card */
	.card-item4 .page-card-img {
		background-image: url("/assets/images/pages/event-program/desktop/collaborate-d.jpg");
	}

	/* Upcoming/previous events title margin bottom */
	.h4-title {
		margin-bottom: 65px;
	}

}

